--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -165,8 +165,11 @@
               <property name="autoFillBackground">
                <bool>false</bool>
               </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(232, 232, 232)</string>
+              </property>
               <property name="frameShape">
-               <enum>QFrame::Box</enum>
+               <enum>QFrame::NoFrame</enum>
               </property>
               <property name="textFormat">
                <enum>Qt::PlainText</enum>
