--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>5</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="sizePolicy">
@@ -815,37 +815,10 @@
             </property>
             <item>
              <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0">
-              <item row="3" column="0">
-               <widget class="QLabel" name="label_2">
+              <item row="7" column="0">
+               <widget class="QLabel" name="label_12">
                 <property name="text">
-                 <string>gear type</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QLineEdit" name="lne_forget"/>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_5">
-                <property name="text">
-                 <string>load values</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>forget (s)</string>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="1">
-               <widget class="QComboBox" name="cbox_gear_type"/>
-              </item>
-              <item row="0" column="1">
-               <widget class="QPushButton" name="btn_load_current">
-                <property name="text">
-                 <string>load</string>
+                 <string>close w/o save</string>
                 </property>
                </widget>
               </item>
@@ -863,15 +836,48 @@
                 </property>
                </widget>
               </item>
+              <item row="5" column="0">
+               <widget class="QLabel" name="label_11">
+                <property name="text">
+                 <string>skip in port</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QComboBox" name="cbox_gear_type"/>
+              </item>
               <item row="4" column="1">
                <widget class="QComboBox" name="cb_s3_uplink_type"/>
               </item>
-              <item row="6" column="1">
-               <widget class="QPushButton" name="btn_setup_apply">
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="lne_vessel"/>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_3">
                 <property name="text">
-                 <string>save</string>
+                 <string>forget (s)</string>
                 </property>
                </widget>
+              </item>
+              <item row="5" column="1">
+               <widget class="QComboBox" name="cb_skip_in_port"/>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>load values</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="label_2">
+                <property name="text">
+                 <string>gear type</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="lne_forget"/>
               </item>
               <item row="4" column="0">
                <widget class="QLabel" name="label_8">
@@ -880,18 +886,26 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
-               <widget class="QLineEdit" name="lne_vessel"/>
-              </item>
-              <item row="5" column="0">
-               <widget class="QLabel" name="label_11">
+              <item row="0" column="1">
+               <widget class="QPushButton" name="btn_load_current">
                 <property name="text">
-                 <string>skip in port</string>
+                 <string>load</string>
                 </property>
                </widget>
               </item>
-              <item row="5" column="1">
-               <widget class="QComboBox" name="cb_skip_in_port"/>
+              <item row="6" column="1">
+               <widget class="QPushButton" name="btn_setup_apply">
+                <property name="text">
+                 <string>save</string>
+                </property>
+               </widget>
+              </item>
+              <item row="7" column="1">
+               <widget class="QPushButton" name="btn_close_wo_save">
+                <property name="text">
+                 <string>close</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
