--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="sizePolicy">
@@ -806,7 +806,7 @@
            </spacer>
           </item>
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1,1,0">
+           <layout class="QVBoxLayout" name="verticalLayout_2" stretch="7,1,1,1">
             <property name="rightMargin">
              <number>6</number>
             </property>
@@ -815,24 +815,17 @@
             </property>
             <item>
              <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0">
-              <item row="7" column="0">
-               <widget class="QLabel" name="label_12">
+              <item row="0" column="1">
+               <widget class="QPushButton" name="btn_load_current">
                 <property name="text">
-                 <string>close w/o save</string>
+                 <string>load</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label">
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_3">
                 <property name="text">
-                 <string>vessel</string>
-                </property>
-               </widget>
-              </item>
-              <item row="6" column="0">
-               <widget class="QLabel" name="label_4">
-                <property name="text">
-                 <string>save values</string>
+                 <string>forget (s)</string>
                 </property>
                </widget>
               </item>
@@ -843,41 +836,8 @@
                 </property>
                </widget>
               </item>
-              <item row="3" column="1">
-               <widget class="QComboBox" name="cbox_gear_type"/>
-              </item>
-              <item row="4" column="1">
-               <widget class="QComboBox" name="cb_s3_uplink_type"/>
-              </item>
-              <item row="1" column="1">
-               <widget class="QLineEdit" name="lne_vessel"/>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>forget (s)</string>
-                </property>
-               </widget>
-              </item>
               <item row="5" column="1">
                <widget class="QComboBox" name="cb_skip_in_port"/>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_5">
-                <property name="text">
-                 <string>load values</string>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="0">
-               <widget class="QLabel" name="label_2">
-                <property name="text">
-                 <string>gear type</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QLineEdit" name="lne_forget"/>
               </item>
               <item row="4" column="0">
                <widget class="QLabel" name="label_8">
@@ -886,26 +846,63 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
-               <widget class="QPushButton" name="btn_load_current">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_5">
                 <property name="text">
-                 <string>load</string>
+                 <string>load values</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label">
+                <property name="text">
+                 <string>vessel</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="1">
+               <widget class="QComboBox" name="cb_s3_uplink_type"/>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="lne_forget"/>
+              </item>
+              <item row="6" column="0">
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>save values</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="lne_vessel"/>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="label_2">
+                <property name="text">
+                 <string>gear type</string>
                 </property>
                </widget>
               </item>
               <item row="6" column="1">
-               <widget class="QPushButton" name="btn_setup_apply">
-                <property name="text">
-                 <string>save</string>
-                </property>
-               </widget>
+               <layout class="QHBoxLayout" name="horizontalLayout_15" stretch="1,1">
+                <item>
+                 <widget class="QPushButton" name="btn_close_wo_save">
+                  <property name="text">
+                   <string>cancel</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btn_setup_apply">
+                  <property name="text">
+                   <string>save</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </item>
-              <item row="7" column="1">
-               <widget class="QPushButton" name="btn_close_wo_save">
-                <property name="text">
-                 <string>close</string>
-                </property>
-               </widget>
+              <item row="3" column="1">
+               <widget class="QComboBox" name="cbox_gear_type"/>
               </item>
              </layout>
             </item>
@@ -933,32 +930,18 @@
              </spacer>
             </item>
             <item>
-             <layout class="QGridLayout" name="gridLayout_2">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_6">
-                <property name="text">
-                 <string>files folder</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="label_7">
-                <property name="text">
-                 <string>history tab</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QPushButton" name="btn_his_purge">
-                <property name="text">
-                 <string>purge</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
+             <layout class="QHBoxLayout" name="horizontalLayout_16">
+              <item>
                <widget class="QPushButton" name="btn_dl_purge">
                 <property name="text">
-                 <string>purge</string>
+                 <string>purge files</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="btn_his_purge">
+                <property name="text">
+                 <string>purge history</string>
                 </property>
                </widget>
               </item>
