--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="sizePolicy">
@@ -1482,7 +1482,7 @@ font: 19pt &quot;DejaVu Sans&quot;;</string>
           <item row="3" column="1">
            <widget class="QCheckBox" name="chk_plt_outside_water">
             <property name="text">
-             <string> Only plot data in-water</string>
+             <string> Plots include data out-of-water</string>
             </property>
            </widget>
           </item>
