--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>7</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="sizePolicy">
@@ -1733,11 +1733,59 @@ font: 19pt &quot;DejaVu Sans&quot;;</string>
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_trawls">
+       <attribute name="title">
+        <string> Trawls</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_8">
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_18" stretch="3,1,1">
+          <item>
+           <widget class="QComboBox" name="cb_trawls_logger"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_trawls_prev_file">
+            <property name="text">
+             <string>prev.</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_trawls_last_file">
+            <property name="text">
+             <string>last</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_19">
+          <item>
+           <widget class="QWebView" name="webView">
+            <property name="url">
+             <url>
+              <string>about:blank</string>
+             </url>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QWebView</class>
+   <extends>QWidget</extends>
+   <header location="global">QtWebKitWidgets/QWebView</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
